foundation-objs/main/default/objects/Opportunity/fields/ID_Product_type__c.field-meta.xml
<CustomField>
    <fullName>ID_Product_type__c</fullName>
    <label>ID Product type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early Payment</fullName>
            </value>
            <value>
                <fullName>Tenor Extension</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>