foundation-objs/main/default/objects/Opportunity/fields/If_SEZ__c.field-meta.xml
<CustomField>
    <fullName>If_SEZ__c</fullName>
    <label>If SEZ (Yes/No)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>