foundation-objs/main/default/objects/Opportunity/fields/In_House_Project__c.field-meta.xml
<CustomField>
    <fullName>In_House_Project__c</fullName>
    <label>In-House Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>