foundation-objs/main/default/objects/Opportunity/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>TEXT( Account.Industry )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry</label>
    <type>Text</type>
</CustomField>