foundation-objs/main/default/objects/Opportunity/fields/isVisibleQuestionnaire__c.field-meta.xml
<CustomField>
    <fullName>isVisibleQuestionnaire__c</fullName>
    <formula>ISPICKVAL(StageName,&quot;Pre SQL&quot;)  || ISPICKVAL(StageName,&quot;SQL&quot;) || ISPICKVAL(StageName,&quot;POC&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isVisibleQuestionnaire</label>
    <type>Checkbox</type>
</CustomField>