foundation-objs/main/default/objects/Opportunity/fields/IT_Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Evaluation_Date__c</fullName>
    <label>IT Evaluation Date</label>
    <type>Date</type>
</CustomField>