foundation-objs/main/default/objects/Opportunity/fields/IT_Head_contact__c.field-meta.xml
<CustomField>
    <fullName>IT_Head_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IT POC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Designation_Oppor__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </filterItems>
        <filterItems>
            <field>Contact.Is_Communicable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (IT Head)</relationshipLabel>
    <relationshipName>Opportunities_IT</relationshipName>
    <type>Lookup</type>
</CustomField>