foundation-objs/main/default/objects/Opportunity/fields/IT_Head_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_Head_Contact_Number__c</fullName>
    <label>IT Head Contact Number</label>
    <type>Phone</type>
</CustomField>