foundation-objs/main/default/objects/Opportunity/fields/IT_Head_Designation__c.field-meta.xml
<CustomField>
    <fullName>IT_Head_Designation__c</fullName>
    <label>IT Head Designation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>