foundation-objs/main/default/objects/Opportunity/fields/IT_Head_Email__c.field-meta.xml
<CustomField>
    <fullName>IT_Head_Email__c</fullName>
    <label>IT Head Email</label>
    <type>Email</type>
</CustomField>