foundation-objs/main/default/objects/Opportunity/fields/IT_Head_Name__c.field-meta.xml
<CustomField>
    <fullName>IT_Head_Name__c</fullName>
    <label>IT Head Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>