foundation-objs/main/default/objects/Opportunity/fields/IT_POC_Email_N__c.field-meta.xml
<CustomField>
    <fullName>IT_POC_Email_N__c</fullName>
    <formula>IT_Head_contact__r.Email</formula>
    <label>IT POC_Email(N)</label>
    <type>Text</type>
</CustomField>