foundation-objs/main/default/objects/Opportunity/fields/Last_Opportunity_Stage_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity_Stage_Update_Date__c</fullName>
    <label>Last Opportunity Stage Update Date</label>
    <type>Date</type>
</CustomField>