foundation-objs/main/default/objects/Opportunity/fields/Latest_Quote_Based_on_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Quote_Based_on_Date__c</fullName>
    <label>Latest Quote Based on Date</label>
    <summarizedField>Quote.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>Quote.TotalPrice</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>