foundation-objs/main/default/objects/Opportunity/fields/Latest_TouchPoint_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_TouchPoint_Date__c</fullName>
    <label>Latest TouchPoint Date</label>
    <type>Date</type>
</CustomField>