foundation-objs/main/default/objects/Opportunity/fields/Lead_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creation_Date__c</fullName>
    <label>Lead Creation Date</label>
    <type>Date</type>
</CustomField>