foundation-objs/main/default/objects/Opportunity/fields/Legacy_Assumed_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Assumed_Closed_Date__c</fullName>
    <label>Legacy Assumed Closed Date</label>
    <type>Date</type>
</CustomField>