foundation-objs/main/default/objects/Opportunity/fields/Legacy_Awaiting_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Awaiting_PO_Date__c</fullName>
    <label>Legacy Awaiting PO Date</label>
    <type>Date</type>
</CustomField>