foundation-objs/main/default/objects/Opportunity/fields/Legacy_Bitrix_Deal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Bitrix_Deal_Name__c</fullName>
    <label>Legacy Bitrix Deal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>