foundation-objs/main/default/objects/Opportunity/fields/Legacy_Bitrix_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Bitrix_ID__c</fullName>
    <label>Legacy Bitrix ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>