foundation-objs/main/default/objects/Opportunity/fields/Legacy_Bitrix_Stage__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Bitrix_Stage__c</fullName>
    <label>Legacy Bitrix Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>