foundation-objs/main/default/objects/Opportunity/fields/Legacy_Comments__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Comments__c</fullName>
    <label>Legacy Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>