foundation-objs/main/default/objects/Opportunity/fields/Legacy_Deal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Deal_Name__c</fullName>
    <label>Legacy Deal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>