foundation-objs/main/default/objects/Opportunity/fields/Legacy_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Demo_Date__c</fullName>
    <label>Legacy Demo Date</label>
    <type>Date</type>
</CustomField>