foundation-objs/main/default/objects/Opportunity/fields/Legacy_Engagement_Ongoing_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Engagement_Ongoing_Date__c</fullName>
    <label>Legacy Engagement Ongoing Date</label>
    <type>Date</type>
</CustomField>