foundation-objs/main/default/objects/Opportunity/fields/Legacy_ERP__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ERP__c</fullName>
    <label>Legacy ERP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>