foundation-objs/main/default/objects/Opportunity/fields/Legacy_Followup_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Followup_Date__c</fullName>
    <label>Legacy Followup Date</label>
    <type>Date</type>
</CustomField>