foundation-objs/main/default/objects/Opportunity/fields/Legacy_Income__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Income__c</fullName>
    <label>Legacy Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>