foundation-objs/main/default/objects/Opportunity/fields/Legacy_IT_Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_IT_Evaluation_Date__c</fullName>
    <label>Legacy IT Evaluation Date</label>
    <type>Date</type>
</CustomField>