foundation-objs/main/default/objects/Opportunity/fields/Legacy_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Lost_Date__c</fullName>
    <label>Legacy Lost Date</label>
    <type>Date</type>
</CustomField>