foundation-objs/main/default/objects/Opportunity/fields/Legacy_Lost_To__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Lost_To__c</fullName>
    <label>Legacy Lost To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>