foundation-objs/main/default/objects/Opportunity/fields/Legacy_Mom_Ent__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Mom_Ent__c</fullName>
    <label>Legacy Mom Ent</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>