foundation-objs/main/default/objects/Opportunity/fields/Legacy_No_of_Eway_Bill_to_be_generated__c.field-meta.xml
<CustomField>
    <fullName>Legacy_No_of_Eway_Bill_to_be_generated__c</fullName>
    <label>Legacy No. of E-way Bill to be generated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>