foundation-objs/main/default/objects/Opportunity/fields/Legacy_No_of_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Legacy_No_of_Vendors__c</fullName>
    <label>Legacy No. of Vendors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>