foundation-objs/main/default/objects/Opportunity/fields/Legacy_One_time_payment__c.field-meta.xml
<CustomField>
    <fullName>Legacy_One_time_payment__c</fullName>
    <label>Legacy One time payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>