foundation-objs/main/default/objects/Opportunity/fields/Legacy_POC_ReconFiling_S3_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_POC_ReconFiling_S3_Date__c</fullName>
    <label>Legacy POC (Recon/Filing) - S3 Date</label>
    <type>Date</type>
</CustomField>