foundation-objs/main/default/objects/Opportunity/fields/Legacy_Price_Negotiation_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Price_Negotiation_Date__c</fullName>
    <label>Legacy Price Negotiation Date</label>
    <type>Date</type>
</CustomField>