foundation-objs/main/default/objects/Opportunity/fields/Legacy_Product__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Product__c</fullName>
    <label>Legacy Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>