foundation-objs/main/default/objects/Opportunity/fields/Legacy_Quote_Sent__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Quote_Sent__c</fullName>
    <label>Legacy Quote Sent</label>
    <type>Date</type>
</CustomField>