foundation-objs/main/default/objects/Opportunity/fields/Legacy_RegionTeam__c.field-meta.xml
<CustomField>
    <fullName>Legacy_RegionTeam__c</fullName>
    <label>Legacy Region/Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>