foundation-objs/main/default/objects/Opportunity/fields/Legacy_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Start_date__c</fullName>
    <label>Legacy Start date</label>
    <type>Date</type>
</CustomField>