foundation-objs/main/default/objects/Opportunity/fields/Legacy_Wrong_Prospect_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Wrong_Prospect_Date__c</fullName>
    <label>Legacy Wrong Prospect Date</label>
    <type>Date</type>
</CustomField>