foundation-objs/main/default/objects/Opportunity/fields/Legal_Approval_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Approval_Rejection_Date__c</fullName>
    <label>Legal Approval / Rejection Date</label>
    <type>Date</type>
</CustomField>