foundation-objs/main/default/objects/Opportunity/fields/Legal_Entity_Name_Of_The_Client__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name_Of_The_Client__c</fullName>
    <label>Legal Entity Name Of The Client</label>
    <length>100</length>
    <type>Text</type>
</CustomField>