foundation-objs/main/default/objects/Opportunity/fields/Listed_Company__c.field-meta.xml
<CustomField>
    <fullName>Listed_Company__c</fullName>
    <label>Listed Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>