foundation-objs/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Low Paying Capacity/Less turnover</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Issues From Top Management</fullName>
            </value>
            <value>
                <fullName>Old Opportunity/No Context/Opportunity Cleanup</fullName>
            </value>
            <value>
                <fullName>Wants to continue with Local consultant/Consulting Firms</fullName>
            </value>
            <value>
                <fullName>Wants to Continue with the Manual process</fullName>
            </value>
            <value>
                <fullName>Will need more time</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>POC Not responsive/Out of Touch/Left the Org</fullName>
            </value>
            <value>
                <fullName>Closed with another entity/Opportunity</fullName>
            </value>
            <value>
                <fullName>Feature not available</fullName>
            </value>
            <value>
                <fullName>Low Compliance Pain</fullName>
            </value>
            <value>
                <fullName>CA involved</fullName>
            </value>
            <value>
                <fullName>plan dropped</fullName>
            </value>
            <value>
                <fullName>Customer not responding</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>order won in another id</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>