foundation-objs/main/default/objects/Opportunity/fields/Marketing_Influence__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Influence__c</fullName>
    <label>Marketing Influence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>