foundation-objs/main/default/objects/Opportunity/fields/Marketing_Influence_of_Business_POC__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Influence_of_Business_POC__c</fullName>
    <formula>text(Bus_POC__r.Marketing_Influence__c)</formula>
    <label>Marketing Influence of Business POC</label>
    <type>Text</type>
</CustomField>