foundation-objs/main/default/objects/Opportunity/fields/Master_admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Master_admin_Email__c</fullName>
    <inlineHelpText>(should belong to company domain name only)</inlineHelpText>
    <label>Master admin Email</label>
    <type>Email</type>
</CustomField>