foundation-objs/main/default/objects/Opportunity/fields/Merge_With_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Merge_With_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merge With Opportunity</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Opportunity.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <valueField>Opportunity.Id</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Lost, Closed - Merged</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Merged Opportunities</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>