foundation-objs/main/default/objects/Opportunity/fields/NDA_Status__c.field-meta.xml
<CustomField>
    <fullName>NDA_Status__c</fullName>
    <label>NDA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Required - Pending</fullName>
            </value>
            <value>
                <fullName>Required - Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>