foundation-objs/main/default/objects/Opportunity/fields/Negotiation_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Closed_Date__c</fullName>
    <label>Negotiation Closed Date</label>
    <type>Date</type>
</CustomField>