foundation-objs/main/default/objects/Opportunity/fields/New_Opportunity_Score__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunity_Score__c</fullName>
    <label>New_Opportunity_Score</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>