foundation-objs/main/default/objects/Opportunity/fields/New_Opportunity_Score_Priority__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunity_Score_Priority__c</fullName>
    <label>New_Opportunity_Score_Priority</label>
    <length>10</length>
    <type>Text</type>
</CustomField>