foundation-objs/main/default/objects/Opportunity/fields/No_of_Airlines__c.field-meta.xml
<CustomField>
    <fullName>No_of_Airlines__c</fullName>
    <label>No of Airlines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>