foundation-objs/main/default/objects/Opportunity/fields/No_of_B2C_Sales_invoice__c.field-meta.xml
<CustomField>
    <fullName>No_of_B2C_Sales_invoice__c</fullName>
    <label>No. of B2C Sales invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>