foundation-objs/main/default/objects/Opportunity/fields/No_of_B2C_Sales_Invoices_Annually__c.field-meta.xml
<CustomField>
    <fullName>No_of_B2C_Sales_Invoices_Annually__c</fullName>
    <label>Estimated no. of B2C sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>