foundation-objs/main/default/objects/Opportunity/fields/No_of_E_Invoice_E_way_Bill_Product__c.field-meta.xml
<CustomField>
    <fullName>No_of_E_Invoice_E_way_Bill_Product__c</fullName>
    <label>No of E-Invoice &amp; E way Bill Product</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Name__c</field>
        <operation>equals</operation>
        <value>01u2x000002Qs5d</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>