foundation-objs/main/default/objects/Opportunity/fields/No_of_E_invoicing_Products_C__c.field-meta.xml
<CustomField>
    <fullName>No_of_E_invoicing_Products_C__c</fullName>
    <label>No of E-invoicing Products(C)</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Name__c</field>
        <operation>contains</operation>
        <value>E-invoicing,EWB,EINV,ClearOne,E-Way Bill,B2C-QR</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>