foundation-objs/main/default/objects/Opportunity/fields/No_of_E_way_Bill_to_be_generated__c.field-meta.xml
<CustomField>
    <fullName>No_of_E_way_Bill_to_be_generated__c</fullName>
    <label>No. of E-way Bill to be generated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>