foundation-objs/main/default/objects/Opportunity/fields/No_Of_EWB_Product__c.field-meta.xml
<CustomField>
    <fullName>No_Of_EWB_Product__c</fullName>
    <label>No Of EWB Product</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Name__c</field>
        <operation>equals</operation>
        <value>01u2x000001Z8YY</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>