foundation-objs/main/default/objects/Opportunity/fields/No_of_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>No_of_GSTIN__c</fullName>
    <label>No. of GSTIN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>