foundation-objs/main/default/objects/Opportunity/fields/No_of_GSTIN_verification_credits__c.field-meta.xml
<CustomField>
    <fullName>No_of_GSTIN_verification_credits__c</fullName>
    <label>No. of GSTIN verification credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>