foundation-objs/main/default/objects/Opportunity/fields/No_of_IRNs__c.field-meta.xml
<CustomField>
    <fullName>No_of_IRNs__c</fullName>
    <label>Estimated no. of IRNs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>